--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.17.1",
     "node-sass": "^4.7.2",
     "react-hot-loader": "^3.1.3",
+    "react-swipe": "^5.1.1",
     "sass-loader": "^6.0.6"
   },
   "proxy": {
@@ -38,13 +39,13 @@
       "host": "www.luoboduo.com",
       "changeOrigin": true
     },
-    "/wx":{
-    	"target": "http://localhost:8088",
-    	"host": "localhost:8088",
-    	"changeOrigin": true,
-    	"pathRewrite": {
-    		"^/wx":"/"
-    	}
+    "/wx": {
+      "target": "http://localhost:8088",
+      "host": "localhost:8088",
+      "changeOrigin": true,
+      "pathRewrite": {
+        "^/wx": "/"
+      }
     }
   }
 }
